--- a/pages/index/detail/detail.wxml
+++ b/pages/index/detail/detail.wxml
@@ -32,14 +32,15 @@
 
   </view>
   <!-- 卡券 -->
-  <!-- <view class='activity-box' wx-if="{{ shopInfo.isActivity == 1 }}">
+  <!-- <view class='activity-box' wx-if="{{ shopInfo.isActivity == 1 }}"> -->
+  <view class='activity-box'>
     <view class='activity-coupon'>
       <view class='coupon-price'>{{ shopInfo.coupon }}</view>
       <form bindsubmit="couponSubmit" report-submit='true'>
         <button formType="submit" class='coupon-btn' hover-class='active'></button>
       </form>
     </view>
-  </view> -->
+  </view>
   <!-- 卡券 -->
   
   <!-- 京东会员券 -->
