代金券and京东活动上线

--- a/pages/activity/activity.wxss
+++ b/pages/activity/activity.wxss
@@ -45,7 +45,7 @@ page {
 .content {
   padding: 40rpx 0 30rpx;
   flex: auto;
-  background: url('https://ylbb-wxapp.oss-cn-beijing.aliyuncs.com/store/activity-bg.png') no-repeat;
+  background: url('https://ylbb-wxapp.oss-cn-beijing.aliyuncs.com/store/activityBg.png') no-repeat;
   background-size: cover;
 }
 .content-box {
