--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -6,12 +6,20 @@
     </picker>
   </view>
  
-  <view class='swiper'>
-    <swiper indicator-dots="{{ swiperArray.length > 1 }}" autoplay="true" interval="5000" duration="300"  indicator-active-color="#FFF" circular="true">
-      <block wx:for="{{ swiperArray }}" wx:key="key">
+  <view class='swiper'> 
+    <swiper indicator-dots="{{ swiperArray.length > 1 }}" autoplay="true" interval="5000" duration="300"  indicator-active-color="#FFF" circular="true" indicator-dots>
+      <!-- <block wx:for="{{ swiperArray }}" wx:key="key">
         <swiper-item>
           <navigator url='activityIndex/activityIndex'><image src="{{ item }}" class="slide-image" width="355" height="178"/></navigator>
+        </swiper-item> -->
+       <block>
+        <swiper-item>
+          <navigator url='/pages/activity/index/index'><image src="http://ylbb-business.oss-cn-beijing.aliyuncs.com/hlsbanner414312.png" class="slide-image" width="355" height="178"/></navigator>
         </swiper-item>
+        <swiper-item>
+          <navigator url='activityIndex/activityIndex'><image src="http://ylbb-business.oss-cn-beijing.aliyuncs.com/jdPlusBanner.png" class="slide-image" width="355" height="178"/></navigator>
+        </swiper-item>       
+
       </block>
     </swiper>
   </view>
