--- a/pages/user/coupon/coupon.wxml
+++ b/pages/user/coupon/coupon.wxml
@@ -1,5 +1,5 @@
 <view class='coupon' wx:if="{{ couponItems.length }}">
-  <view wx:for="{{ couponItems }}" wx:key="" class='item {{ item.useStatus == 1 ? "active" : "" }}'>
+  <view wx:for="{{ couponItems }}" wx:key="" class='item {{ item.useStatus == 1 ? "active" : "" }}'> 
     <view class='item-cell'>
       <view class='item-box'>
         <view class='item-h2'>{{ item.couponName }}</view>
@@ -25,7 +25,7 @@
       <view>体验结束后，向门店支付差额即可</view>
     </view>
     <view class='alert-content' wx:if="{{ useStatus != 1 }}">
-      邀2位好友到店体验即得好礼
+      邀请好友到店体验得好礼
     </view>
     <view class='alert-footer' hover-class='active'>
       <view class='alert-footer-text {{ useStatus == 1 ? "" : "width" }}' bindtap='closeAlert'>我知道了</view>
