--- a/pages/index/detail/detail.wxml
+++ b/pages/index/detail/detail.wxml
@@ -6,7 +6,6 @@
     <view class='head-cover'>
 
       <view class='head-card' wx:if="{{ shopInfo.countryCardStatus == 1 }}">全国通卡店</view>
-  
       <view class='swiper' wx:if="{{ shopInfo.shopInfoImag.length }}">
         <swiper indicator-dots="true" autoplay="true" interval="3000" duration="300" circular="true">
           <block wx:for="{{ shopInfo.shopInfoImag }}" wx:key="key">
@@ -28,20 +27,54 @@
         <text>{{ shopInfo.address }}</text>
         <view hover-class='active' bindtap='mapclick'>导航</view>
       </view>
+      <view wx:for="{{ shopInfo.activityMessage }}" wx:key="index">
+        <view class='head-price' wx:if="{{ item.activityId==39 }}">
+          <text>单游价</text>
+          <text>￥{{ item.originalPrice }}</text>
+        </view>
+        </view>
     </view>
-
+     
   </view>
+  <view wx:for="{{ shopInfo.activityMessage }}" wx:key="index">
   <!-- 卡券 -->
-   <view class='activity-box' wx-if="{{ shopInfo.isActivity == 1 }}">
+   <view class='activity-box' wx-if="{{ item.activityId==37 }}">
     <view class='activity-coupon'>
-      <view class='coupon-price'>{{ shopInfo.coupon }}</view>
+      <view class='coupon-price'>{{ item.coupon }}</view>
       <form bindsubmit="couponSubmit" report-submit='true'>
         <button formType="submit" class='coupon-btn' hover-class='active'></button>
       </form>
     </view>
   </view>
   <!-- 卡券 -->
-  
+    <!-- 体验卡 -->
+  <view class='activity-box' wx-if="{{ item.activityId==39 }}">
+    <view class='activity-card'>
+      <view class='card_tit'><text>团</text>{{ item.activityName }}</view>
+      <view class='card_main'>
+            <view class='card_left'>
+                  <image src='https://ylbb-wxapp.oss-cn-beijing.aliyuncs.com/store/tyk4545455641414.png'></image>
+            </view>
+            <view class='card_right'>
+                <view class='card_right_tit'>{{ item.activityName }}</view>
+                <view class='card_right_coupon'>￥{{ item.coupon }}<text>¥{{ item.originalPrice }}</text></view>
+                <form bindsubmit="cardSubmit" report-submit='true'>
+                  <button formType="submit" class='card-btn' hover-class='active'>立即购买</button>
+                </form>
+            </view>
+      </view>
+      <!-- <view class='card-price'>￥{{ item.coupon }}
+        <text>¥{{ item.originalPrice }}</text>
+      </view>
+      <view class='card-text'>
+        <text>团</text>婴儿游泳单次体验劵</view>
+      <form bindsubmit="cardSubmit" report-submit='true'>
+        <button formType="submit" class='card-btn' hover-class='active'>立即购买</button>
+      </form>-->
+    </view> 
+  </view>
+  </view>
+  <!-- 卡券 -->
   <!-- 京东会员券 -->
     <view class='jdVoucher' hidden="{{voucher}}">
 
@@ -146,6 +179,7 @@
 
 
   <!-- footer -->
+    <!-- <view class='share' hover-class='active'>分享</view> -->
   <view class='footer' hover-class='active' bindtap='makeAppointment'>去预约游泳课</view>
 
 </view>
