--- a/pages/serve/serve-details/serve-details.wxss
+++ b/pages/serve/serve-details/serve-details.wxss
@@ -34,6 +34,7 @@ page{
 
 .store-info{
   padding-bottom: 26rpx;
+  overflow: hidden;
 }
 .title-button{
   width: 80rpx;
@@ -64,8 +65,7 @@ page{
 .footer{
   width: 100%;
   text-align: center;
-  position: fixed;
-  bottom: 50rpx;
+  padding:80rpx 0 50rpx 0;
 }
 .footer-phone{
    color: rgb(150, 150, 150);
@@ -114,4 +114,137 @@ page{
 }
 .reset-btn.active{
   opacity: .8;
+}
+.serve_tit{
+  width: 690rpx;
+  margin: 0 auto;
+  padding:0 30rpx;
+  background: #fff;
+  height: 100rpx;
+  line-height: 100rpx;
+  margin-top: 20rpx;
+  font-size: 32rpx;
+}
+.serve_tit text{
+  float: right;
+}
+.store_left{
+  width: 120rpx;
+  height: 120rpx;
+  float: left;
+  margin-right: 24rpx;
+  margin-top: 8rpx;
+  border-radius: 10rpx;
+  overflow: hidden;
+}
+.store_left image{
+  width: 100%;
+  height: 100%;
+}
+.store_right{
+  width: 500rpx;
+  float: left;
+}
+
+.ticket{
+  width: 690rpx;
+  height: 100rpx;
+  background: url('https://ylbb-wxapp.oss-cn-beijing.aliyuncs.com/store/server_banner4554.png')no-repeat;
+  background-size:100% 100%;
+  margin-top: 30rpx; 
+  overflow: hidden;
+}
+.ticket_banner{
+  height: 40rpx;
+  color: #FFF;
+  font-size: 30rpx;
+  overflow: hidden;
+  margin-top: 30rpx;
+}
+.ticket_banner text:first-child{
+  width: 35rpx;
+  height: 35rpx;
+  line-height: 35rpx;
+  font-size: 22rpx;
+  background:#FD5576;
+  display: inline-block;
+  text-align: center;
+  border-radius: 10rpx;
+  margin: 2.5rpx 30rpx 0 30rpx;
+}
+.ticket_banner text:last-child{
+  padding-left: 20rpx;
+  line-height: 40rpx;
+  font-size: 30rpx;
+  color: #FD5576;
+  display: inline-block;
+  border-left: solid 1rpx #FD5576;
+}
+.ticket_list{
+  width: 100%;
+  overflow: hidden;
+  margin-top: 35rpx;
+}
+.ticket_left{
+  width: 500rpx;
+  font-size: 26rpx;
+  color: #aaa;
+  float: left;
+}
+.ticket_left view{
+  height: 50rpx;
+  line-height: 50rpx;
+}
+.ticke_right{
+  width: 114rpx;
+  font-size: 22rpx;
+  color: #aaa;
+  height: 44rpx;
+  line-height: 44rpx;
+  padding: 0;
+  margin: 0;
+  float: right;
+  border:solid 1rpx #aaa;
+  text-align: center;
+  border-radius: 10rpx;
+  background: none;
+  box-shadow: 0;
+}
+.store-info-content1 view{
+  font-size: 26rpx;
+  color: #aaa;
+  margin-top: 20rpx;
+}
+.tkSuccess{
+  background: #fff;
+  padding: 50rpx 0;
+  margin-top: 20rpx;
+}
+.tkSuccess_icon{
+  width: 80rpx;
+  height: 80rpx;
+  margin: 0 auto;
+  margin-top: 20rpx;
+}
+.tkSuccess_icon image{
+  width: 100%;
+  height: 100%;
+}
+.tkSuccess_text{
+  width:100%;
+  color: #aaa;
+  font-size: 24rpx;
+  text-align: center;
+  margin-top: 20rpx;
+}
+.tkSuccess_text text{
+  font-size: 32rpx;
+  color: #000;
+  display: block;
+  height: 50rpx;
+  line-height: 50rpx;
+  font-weight: 600;
+}
+.ticket_left{
+  font-size: 24rpx;
 }
