--- a/pages/user/coupon/coupon.wxml
+++ b/pages/user/coupon/coupon.wxml
@@ -1,24 +1,5 @@
-<view class='coupon' wx:if="{{ couponItems.length }}">
-  <view wx:for="{{ couponItems }}" wx:key="" class='item {{ item.useStatus == 1 ? "active" : "" }}' wx:if="{{ item.useStatus == 1 }}"> 
-    <view class='item-cell'>
-      <view class='item-box'>
-        <view class='item-h2'>{{ item.couponName }}</view>
-         <view class='item-h6'>{{ item.shopName }}(专用)</view> 
-        <view class='item-p'>有效期：{{ item.startDate }} 至 {{ item.endDate }}</view>
-      </view>
-    </view>
-    <view class='item-info'>
-      <view class='info-h2'>
-        <text class='large'>{{ item.couponAmount }}</text>元
-      </view>
-      <view class='info-btn' hover-class='active' data-status="{{ item.useStatus }}" bindtap='useCoupon'>{{ item.useStatus == 1 ? "未使用" : "已使用" }}</view>  
-    </view>
-  </view>
-</view>
-
 <view  wx:if="{{ listUserCoupon.length }}">
 <view class='coupon2' wx:for="{{ listUserCoupon }}" wx:key=""   wx:if="{{ item.useFlag==0 }}">
-<!-- <navigator url='../../serve/serve-details/serve-details?couponCode={{item.couponCode}}' ></navigator> -->
   <view class='item {{ item.useStatus == 1 ? "active" : "" }}' data-ids='{{item.couponCode}}' bindtap='toDetail'> 
     <view class='item-cell'>
       <view class='item-box'>
@@ -37,8 +18,8 @@
 </view>
 
 
-<view class='coupon' wx:if="{{ couponItems.length }}">
-  <view wx:for="{{ couponItems }}" wx:key="" class='item {{ item.useStatus == 1 ? "active" : "" }}' wx:if="{{ item.useStatus != 1 }}"> 
+<view class='coupon active' wx:if="{{ couponItems.length }}">
+  <view wx:for="{{ couponItems }}" wx:key="" class='item active' > 
     <view class='item-cell'>
       <view class='item-box'>
         <view class='item-h2'>{{ item.couponName }}</view>
@@ -50,7 +31,7 @@
       <view class='info-h2'>
         <text class='large'>{{ item.couponAmount }}</text>元
       </view>
-      <view class='info-btn' hover-class='active' data-status="{{ item.useStatus }}" bindtap='useCoupon'>{{ item.useStatus == 1 ? "未使用" : "已使用" }}</view>  
+      <view class='info-btn'>{{ item.useStatus == 1 ? "已过期" : "已使用" }}</view>  
     </view>
   </view>
 </view>
