--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -215,3 +215,33 @@ swiper image{
   line-height: 60rpx;
   margin-left: 18rpx;
 }
+.getaddress{
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, .8);
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+.addressMain{
+  width: 690rpx;
+  height: 350rpx;
+  background: #fff;
+  margin: 0 auto;
+  text-align: center;
+  border-radius: 10rpx;
+  margin-top: 300rpx;
+}
+.addTit{
+  text-align: center;
+  line-height: 120rpx;
+}
+.addcontent{
+  font-size: 30rpx;
+}
+.addressMain button{
+  width: 500rpx;
+  display: block;
+  margin: 0 auto;
+  margin-top: 40rpx;
+}
