修复日期显示不全

--- a/pages/user/coupon/coupon.wxml
+++ b/pages/user/coupon/coupon.wxml
@@ -79,5 +79,5 @@
     </view>
   </view>
 </view>
-
-<nothing wx:if="{{ !couponItems.length&& !listUserCoupon.length }}">暂无优惠券</nothing> 
+<!-- wx:if="{{ !couponItems.length&& !listUserCoupon.length }}" -->
+<nothing >暂无优惠券</nothing> 
