--- a/pages/index/detail/appointment/appointment.wxss
+++ b/pages/index/detail/appointment/appointment.wxss
@@ -146,6 +146,8 @@ background-size:40rpx;
 .tab-head-box{
   width: 100%;
   position: relative;
+  overflow: hidden;
+  height: 150rpx;
 }
 .tab-content{
   white-space:nowrap;
@@ -156,7 +158,7 @@ background-size:40rpx;
   transform: none;
 }
 .tab-content.move1{
-  transform: translate3d(-50%, 0, 0);
+  transform: translate3d(-100%, 0, 0);
 }
 
 .tab-item{
